--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,15 +27,41 @@ dist.jar=${dist.dir}/BrokerLedger.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.commons-io-2.2.jar=jars/kairosclientjars/commons-io-2.2.jar
+file.reference.commons-lang-2.6.jar=jars/kairosclientjars/commons-lang-2.6.jar
+file.reference.commons-logging-1.1.3.jar=jars/kairosclientjars/commons-logging-1.1.3.jar
 file.reference.datecalc-jdk-1.4.0-javadoc.jar=jars/datecalc-jdk-1.4.0-javadoc.jar
 file.reference.datecalc-jdk-1.4.0.jar=jars/datecalc-jdk-1.4.0.jar
 file.reference.datecalc-jdk-osgi-1.4.0.jar=jars/datecalc-jdk-osgi-1.4.0.jar
+file.reference.gson-2.2.4.jar=jars/kairosclientjars/gson-2.2.4.jar
+file.reference.guava-14.0.jar=jars/kairosclientjars/guava-14.0.jar
+file.reference.hamcrest-all-1.1.jar=jars/kairosclientjars/hamcrest-all-1.1.jar
+file.reference.httpclient-4.3.3.jar=jars/kairosclientjars/httpclient-4.3.3.jar
+file.reference.httpcore-4.3.2.jar=jars/kairosclientjars/httpcore-4.3.2.jar
+file.reference.jsr305-2.0.0.jar=jars/kairosclientjars/jsr305-2.0.0.jar
+file.reference.KairosClient.jar=jars/kairosclientjars/KairosClient.jar
+file.reference.KairosClientOld.jar=jars/kairosclientjars/KairosClientOld.jar
+file.reference.kairosdb-0.9.4-5.jar=jars/kairosclientjars/kairosdb-0.9.4-5.jar
+file.reference.mockito-core-1.9.5.jar=jars/kairosclientjars/mockito-core-1.9.5.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.datecalc-jdk-1.4.0-javadoc.jar}:\
     ${file.reference.datecalc-jdk-1.4.0.jar}:\
-    ${file.reference.datecalc-jdk-osgi-1.4.0.jar}
+    ${file.reference.datecalc-jdk-osgi-1.4.0.jar}:\
+    ${file.reference.KairosClient.jar}:\
+    ${file.reference.KairosClientOld.jar}:\
+    ${file.reference.commons-io-2.2.jar}:\
+    ${file.reference.commons-lang-2.6.jar}:\
+    ${file.reference.commons-logging-1.1.3.jar}:\
+    ${file.reference.gson-2.2.4.jar}:\
+    ${file.reference.guava-14.0.jar}:\
+    ${file.reference.hamcrest-all-1.1.jar}:\
+    ${file.reference.httpclient-4.3.3.jar}:\
+    ${file.reference.httpcore-4.3.2.jar}:\
+    ${file.reference.jsr305-2.0.0.jar}:\
+    ${file.reference.kairosdb-0.9.4-5.jar}:\
+    ${file.reference.mockito-core-1.9.5.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
